Setup continious deployment

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,8 @@ java {
     sourceCompatibility = JavaVersion.toVersion("11")
     targetCompatibility = JavaVersion.toVersion("11")
 }
-
-
-
+jar {
+    manifest {
+        attributes 'Main-Class':  'rltw.todo.Application'
+    }
+}
